fixed gutter opacity for horizontal scrolling

--- a/theme.less
+++ b/theme.less
@@ -28,7 +28,7 @@
 }
 
 .CodeMirror-gutters {
-    background-color: rgba(0, 0, 0, .01);
+    background-color: rgb(240, 242, 243);
     min-width: 2em;
     height: 100%;
     border-right: solid 1px @color08;
@@ -40,7 +40,7 @@
     font-size: 10px;
     height: 20px;
     line-height: 20px;
-    padding: 0 8px 0 5px;
+    padding: 0 8px 0 7px;
     text-shadow: 0 0 1px @color00;
 }
 
